rnsc/test_data/integration/error/parser/super_directive/multiple_definitions_with_trailing.rns
.class MyClass

.super firstClass trailing
.super secondClass